# hitsondrip

./: .env.example  .gitignore  README.md  cleanup.py  main.py  new_chase.py  prompt.md  prompt_chase.md  pyproject.toml  verify_mcp_auth.py  verify_metricool.py  verify_slack.py
.github/workflows/: cleanup.yml  daily.yml  new_chase.yml
archive/canva/: README.md  canva_auth.py  canva_oauth.py  prompt.md
archive/measure_landmarks/: README.md  measure_landmarks.py
assets/: placeholder_hashes.json
config/: featured_pack.json
docs/superpowers/plans/: 2026-06-11-just-pulled-backlog-queue.md  2026-06-19-story-9x16-and-caption.md
docs/superpowers/specs/: 2026-06-11-just-pulled-backlog-queue-design.md  2026-06-19-story-9x16-canvas-design.md
queries/: biggest_hit_24h.sql  new_chase.sql  new_chase_freshness.sql  new_chase_near_miss.sql  pack_image_lookup.sql  pack_lookup_by_card.sql
src/: hit_backlog.py  image_effects.py  image_filter.py  image_host.py  metricool.py  new_chase_renderer.py  renderer.py  schedule_time.py  slack.py  state_branch.py  story_canvas.py  string_transforms.py
state/: hit_backlog.json  last_chase_card_id.txt
tests/: test_chase_render_post_to_bytes.py  test_hit_backlog.py  test_render_post_to_bytes.py  test_schedule_time.py  test_state_branch_backlog.py  test_story_canvas.py  test_string_transforms.py
tools/: debug_chain.py  diagnose_chase_ratios.py  discover_metricool_user_id.py  explore_new_chase_schema.py  extract_colors.py  fetch_recent_hits.py  find_card_pack_linkage.py  hash_placeholder.py  probe_chase_mapping_freshness.py  probe_collections.py  render_recent_hits.py  test_pack_lookup.py  verify_chain.py  verify_full_chain.py  verify_new_chase_effects.py  verify_new_chase_query.py
worker/: .gitignore  README.md  package-lock.json  package.json  wrangler.toml
worker/src/: index.ts
